OpenLGTV BCM: some /etc/tmux.conf tweaks
git-svn-id: http://svn.openlgtv.org.ru@189 6f01ea5f-641d-df11-ac65-003048919802

--- a/OpenLGTV_BCM/trunk/OpenLGTV_BCM-src/etc/tmux.conf
+++ b/OpenLGTV_BCM/trunk/OpenLGTV_BCM-src/etc/tmux.conf
@@ -30,10 +30,19 @@ set -g visual-activity on
 
 # Example of using a shell command in the status line
 #set -g status-right "#[fg=yellow]#(uptime | cut -d ',' -f 2-)"
-set -g status-right "#[bg=blue]#[fg=white]\[#22T\]#[bg=yellow]#[fg=black] %H:%M %d-%b-%y"
+#set -g status-right "#[bg=blue]#[fg=white]\[#22T\]#[bg=yellow]#[fg=black] %H:%M %d-%b-%y"
+set -g status-right "#[bg=blue]#[fg=white]\[ #22T \]#[bg=green]#[fg=black] %Y-%m-%d #[bg=yellow]%H:%M#[default]"
 
 # Highlight active window
 set-window-option -g window-status-current-bg red
 #set-window-option -g window-status-current-bg blue
 
+# Extend history limit
+set -g history-limit 4096
 
+# Mouse navigation and copy-paste
+set-option -g mouse-select-pane on
+setw -g mode-mouse on
+
+# `+r loads user configuration, handy
+bind r source-file ~/.tmux.conf
