--- a/lgmod/trunk/busybox/.config
+++ b/lgmod/trunk/busybox/.config
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Busybox version: 1.18.4
-# Fri Apr 29 12:25:57 2011
+# Fri May 13 22:53:26 2011
 #
 CONFIG_HAVE_DOT_CONFIG=y
 
@@ -496,7 +496,7 @@ CONFIG_FEATURE_MODPROBE_SMALL_CHECK_ALREADY_LOADED=y
 # CONFIG_FEATURE_CHECK_TAINTED_MODULE is not set
 # CONFIG_FEATURE_MODUTILS_ALIAS is not set
 # CONFIG_FEATURE_MODUTILS_SYMBOLS is not set
-CONFIG_DEFAULT_MODULES_DIR="/lib/modules"
+CONFIG_DEFAULT_MODULES_DIR="/modules"
 CONFIG_DEFAULT_DEPMOD_FILE="modules.dep"
 
 #
@@ -638,8 +638,8 @@ CONFIG_DC=y
 # CONFIG_DEVFSD_VERBOSE is not set
 # CONFIG_FEATURE_DEVFS is not set
 CONFIG_DEVMEM=y
-# CONFIG_EJECT is not set
-# CONFIG_FEATURE_EJECT_SCSI is not set
+CONFIG_EJECT=y
+CONFIG_FEATURE_EJECT_SCSI=y
 # CONFIG_FBSPLASH is not set
 # CONFIG_FLASHCP is not set
 CONFIG_FLASH_LOCK=y
