--- a/OpenLGTV_BCM/trunk/OpenLGTV_BCM-src/etc/tmux.conf
+++ b/OpenLGTV_BCM/trunk/OpenLGTV_BCM-src/etc/tmux.conf
@@ -18,7 +18,7 @@ set -s escape-time 0
 # Rather than constraining window size to the maximum size of any client 
 # connected to the *session*, constrain window size to the maximum size of any 
 # client connected to *that window*. Much more reasonable.
-setw -g aggressive-resize on
+#setw -g aggressive-resize on
 
 # Allows us to use C-a a  to send commands to a TMUX session inside 
 # another TMUX session
