OpenLGTV BCM: use bootlogd to log boot messages (can now get rid of 'tee' redirections), fix DirectFB config when OPENRELASE used and netcast_keyboard_mouse_support is enabled, shorten time for sync after flashing rootfs in install.sh from 10 to 7 seconds, separate main fs mounts and mtd partitions mounts from rc.mounts to rc.mounts1 and rc.mounts2
git-svn-id: http://svn.openlgtv.org.ru@616 6f01ea5f-641d-df11-ac65-003048919802

--- a/OpenLGTV_BCM/trunk/OpenLGTV_BCM-src/etc/openrelease/openrelease.cfg
+++ b/OpenLGTV_BCM/trunk/OpenLGTV_BCM-src/etc/openrelease/openrelease.cfg
@@ -27,3 +27,6 @@ enable_divx_preview = 1
 # If auto mount is disabled you should mount all needed media into /mnt/usb1/Drive1 directory.
 # It's the only directory that will be explored in the integrated player in this case.
 enable_auto_mount = 1
+
+#debug_ipaddr = 192.168.0.2
+#debug_port = 99
