--- a/OpenLGTV_BCM/trunk/OpenLGTV_BCM-src/etc/openrelease/openrelease.cfg
+++ b/OpenLGTV_BCM/trunk/OpenLGTV_BCM-src/etc/openrelease/openrelease.cfg
@@ -5,13 +5,13 @@ symfile = /mnt/lg/res/lgres/RELEASE.sym
 # input  - fifo that is used for stdin redirection.
 #          Default: /tmp/openrelease.in
 # input needs to be redirected to be able to change keys mapping
-#input = /tmp/openrelease.in
-input = NULL
+input = /tmp/openrelease.in
+#input = NULL
 
 # output - file that is used for stdout redirection.
 #          Default: disabled
-#output = /tmp/openrelease.out
-output = NULL
+output = /tmp/openrelease.out
+#output = NULL
 
 # keymap - relative path (to base directory of openrelease.cfg) to key map file.
 #          Default: openrelease_keymap.cfg
@@ -28,5 +28,5 @@ enable_divx_preview = 1
 # It's the only directory that will be explored in the integrated player in this case.
 enable_auto_mount = 1
 
-#debug_ipaddr = 192.168.0.2
+#debug_ipaddr = 192.168.100.99
 #debug_port = 99
