LGMOD_S7 version: 1.0.10 alpha 5 - OPENRELEASE telnet, init options in Tools page
git-svn-id: http://svn.openlgtv.org.ru@629 6f01ea5f-641d-df11-ac65-003048919802

--- a/lgmod_s7/trunk/busybox/.config
+++ b/lgmod_s7/trunk/busybox/.config
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Busybox version: 1.18.5
-# Thu Jul  7 08:47:24 2011
+# Sat Sep 24 14:07:46 2011
 #
 CONFIG_HAVE_DOT_CONFIG=y
 
@@ -61,7 +61,7 @@ CONFIG_STATIC=y
 # CONFIG_FEATURE_INDIVIDUAL is not set
 # CONFIG_FEATURE_SHARED_BUSYBOX is not set
 CONFIG_LFS=y
-CONFIG_CROSS_COMPILER_PREFIX="/home/rcon/Projects/LG32LD465/cross-compiler-mipsel/bin/mipsel-"
+CONFIG_CROSS_COMPILER_PREFIX="../../../cross-compiler-mipsel/bin/mipsel-"
 CONFIG_EXTRA_CFLAGS=""
 
 #
@@ -265,8 +265,8 @@ CONFIG_SYNC=y
 # CONFIG_TAC is not set
 CONFIG_TAIL=y
 CONFIG_FEATURE_FANCY_TAIL=y
-# CONFIG_TEE is not set
-# CONFIG_FEATURE_TEE_USE_BLOCK_IO is not set
+CONFIG_TEE=y
+CONFIG_FEATURE_TEE_USE_BLOCK_IO=y
 CONFIG_TOUCH=y
 CONFIG_TRUE=y
 CONFIG_TTY=y
@@ -483,8 +483,8 @@ CONFIG_INSMOD=y
 CONFIG_RMMOD=y
 CONFIG_LSMOD=y
 CONFIG_FEATURE_LSMOD_PRETTY_2_6_OUTPUT=y
-# CONFIG_MODPROBE is not set
-# CONFIG_FEATURE_MODPROBE_BLACKLIST is not set
+CONFIG_MODPROBE=y
+CONFIG_FEATURE_MODPROBE_BLACKLIST=y
 CONFIG_DEPMOD=y
 
 #
@@ -686,7 +686,7 @@ CONFIG_MOUNTPOINT=y
 # CONFIG_RFKILL is not set
 # CONFIG_RUNLEVEL is not set
 CONFIG_RX=y
-# CONFIG_SETSID is not set
+CONFIG_SETSID=y
 CONFIG_STRINGS=y
 # CONFIG_TASKSET is not set
 # CONFIG_FEATURE_TASKSET_FANCY is not set
@@ -875,8 +875,8 @@ CONFIG_PIDOF=y
 CONFIG_FEATURE_PIDOF_SINGLE=y
 CONFIG_FEATURE_PIDOF_OMIT=y
 CONFIG_PKILL=y
-CONFIG_PS=y
-CONFIG_FEATURE_PS_WIDE=y
+# CONFIG_PS is not set
+# CONFIG_FEATURE_PS_WIDE is not set
 # CONFIG_FEATURE_PS_TIME is not set
 # CONFIG_FEATURE_PS_ADDITIONAL_COLUMNS is not set
 # CONFIG_FEATURE_PS_UNUSUAL_SYSTEMS is not set
