--- a/lgmod_s7/trunk/rootfs/etc/openrelease/openrelease.cfg
+++ b/lgmod_s7/trunk/rootfs/etc/openrelease/openrelease.cfg
@@ -5,13 +5,23 @@ symfile = /mnt/lg/res/lgres/RELEASE.sym
 # input  - fifo that is used for stdin redirection.
 #          Default: /tmp/openrelease.in
 # input needs to be redirected to be able to change keys mapping
-#input = /tmp/openrelease.in
-input = NULL
+input = /tmp/openrelease.in
+#input = NULL
 
 # output - file that is used for stdout redirection.
 #          Default: disabled
-#output = /tmp/openrelease.out
-output = NULL
+#output = NULL
+output = /tmp/openrelease.out
+
+# debug_ipaddr - ipaddr for debug service
+#                Default: all interfaces
+debug_ipaddr = NULL
+#debug_ipaddr = 127.0.0.1
+
+# debug_port - port for debug service
+#              Default: disabled
+#debug_port = 0
+debug_port = 2323
 
 # keymap - relative path (to base directory of openrelease.cfg) to key map file.
 #          Default: openrelease_keymap.cfg
