--- a/lgmod_s7/trunk/busybox/.config
+++ b/lgmod_s7/trunk/busybox/.config
@@ -61,7 +61,7 @@ CONFIG_STATIC=y
 # CONFIG_FEATURE_INDIVIDUAL is not set
 # CONFIG_FEATURE_SHARED_BUSYBOX is not set
 CONFIG_LFS=y
-CONFIG_CROSS_COMPILER_PREFIX="../../../cross-compiler-mipsel/bin/mipsel-"
+CONFIG_CROSS_COMPILER_PREFIX="../cross-compiler-mipsel/bin/mipsel-"
 CONFIG_EXTRA_CFLAGS=""
 
 #
