LGMOD_S7: kernel config-flash (from LG)
git-svn-id: http://svn.openlgtv.org.ru@632 6f01ea5f-641d-df11-ac65-003048919802

--- a/lgmod_s7/trunk/kernel/.config
+++ b/lgmod_s7/trunk/kernel/.config
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Linux kernel version: 2.6.26
-# Tue Nov 24 15:53:53 2009
+# Tue Nov 24 15:52:42 2009
 #
 
 #
@@ -47,39 +47,39 @@ CONFIG_MSTAR_TITANIA_BD_GP2_DEMO1=y
 CONFIG_MSTAR_TITANIA_MMAP_256MB_256MB=y
 # CONFIG_MSTAR_TITANIA_BD_T2_LG_256MDDR_BOARD is not set
 CONFIG_MSTAR_NAND=y
-# CONFIG_MSTAR_TSP is not set
-# CONFIG_MSTAR_GE is not set
-# CONFIG_MSTAR_GOP is not set
-# CONFIG_MSTAR_MPOOL is not set
+CONFIG_MSTAR_TSP=y
+CONFIG_MSTAR_GE=y
+CONFIG_MSTAR_GOP=y
+CONFIG_MSTAR_MPOOL=y
 CONFIG_MSTAR_IIC=y
 CONFIG_MSTAR_GPIO=y
-# CONFIG_MSTAR_PWM is not set
+CONFIG_MSTAR_PWM=y
 CONFIG_MSTAR_EMAC=y
-# CONFIG_MSTAR_SYSTEM is not set
-# CONFIG_MSTAR_SCALER is not set
-# CONFIG_MSTAR_MAD is not set
-# CONFIG_MSTAR_VD is not set
-# CONFIG_MSTAR_MVOP is not set
-# CONFIG_MSTAR_MVD is not set
-# CONFIG_MSTAR_H264 is not set
-# CONFIG_MSTAR_IR is not set
+CONFIG_MSTAR_SYSTEM=y
+CONFIG_MSTAR_SCALER=y
+CONFIG_MSTAR_MAD=y
+CONFIG_MSTAR_VD=y
+CONFIG_MSTAR_MVOP=y
+CONFIG_MSTAR_MVD=y
+CONFIG_MSTAR_H264=y
+CONFIG_MSTAR_IR=y
 CONFIG_MSTAR_MICOM=y
-# CONFIG_MSTAR_CI is not set
-# CONFIG_MSTAR_TTX is not set
-# CONFIG_MSTAR_VE is not set
-# CONFIG_MSTAR_CC is not set
-# CONFIG_MSTAR_JPEG is not set
-# CONFIG_MSTAR_MSMAILBOX is not set
-# CONFIG_MSTAR_SPI is not set
+CONFIG_MSTAR_CI=y
+CONFIG_MSTAR_TTX=y
+CONFIG_MSTAR_VE=y
+CONFIG_MSTAR_CC=y
+CONFIG_MSTAR_JPEG=y
+CONFIG_MSTAR_MSMAILBOX=y
+CONFIG_MSTAR_SPI=y
 # CONFIG_MSTAR_STR is not set
-# CONFIG_MSTAR_M4VE is not set
-# CONFIG_MSTAR_DIP is not set
-# CONFIG_MSTAR_CEC is not set
-# CONFIG_MSTAR_DEMOD is not set
-# CONFIG_MSTAR_MPIF is not set
-# CONFIG_MSTAR_AESDMA is not set
-# CONFIG_MSTAR_BDMA is not set
-# CONFIG_MSTAR_PWS is not set
+CONFIG_MSTAR_M4VE=y
+CONFIG_MSTAR_DIP=y
+CONFIG_MSTAR_CEC=y
+CONFIG_MSTAR_DEMOD=y
+CONFIG_MSTAR_MPIF=y
+CONFIG_MSTAR_AESDMA=y
+CONFIG_MSTAR_BDMA=y
+CONFIG_MSTAR_PWS=y
 CONFIG_MSTAR_PROBE=y
 CONFIG_MIPS=y
 CONFIG_ZONE_DMA=y
@@ -228,7 +228,7 @@ CONFIG_SYSFS_DEPRECATED_V2=y
 # CONFIG_RELAY is not set
 # CONFIG_NAMESPACES is not set
 # CONFIG_BLK_DEV_INITRD is not set
-# CONFIG_CC_OPTIMIZE_FOR_SIZE is not set
+CONFIG_CC_OPTIMIZE_FOR_SIZE=y
 CONFIG_SYSCTL=y
 CONFIG_EMBEDDED=y
 CONFIG_SYSCTL_SYSCALL=y
@@ -237,8 +237,8 @@ CONFIG_KALLSYMS=y
 # CONFIG_KALLSYMS_EXTRA_PASS is not set
 CONFIG_HOTPLUG=y
 CONFIG_PRINTK=y
-CONFIG_BUG=y
-CONFIG_ELF_CORE=y
+# CONFIG_BUG is not set
+# CONFIG_ELF_CORE is not set
 # CONFIG_PCSPKR_PLATFORM is not set
 # CONFIG_COMPAT_BRK is not set
 CONFIG_BASE_FULL=y
@@ -633,9 +633,8 @@ CONFIG_SERIAL_8250_RUNTIME_UARTS=4
 #
 CONFIG_SERIAL_CORE=y
 CONFIG_SERIAL_CORE_CONSOLE=y
-CONFIG_UNIX98_PTYS=y
-CONFIG_LEGACY_PTYS=y
-CONFIG_LEGACY_PTY_COUNT=256
+# CONFIG_UNIX98_PTYS is not set
+# CONFIG_LEGACY_PTYS is not set
 # CONFIG_IPMI_HANDLER is not set
 # CONFIG_HW_RANDOM is not set
 # CONFIG_R3964 is not set
@@ -904,25 +903,10 @@ CONFIG_SQUASHFS_FRAGMENT_CACHE_SIZE=3
 # CONFIG_SYSV_FS is not set
 # CONFIG_UFS_FS is not set
 CONFIG_NETWORK_FILESYSTEMS=y
-CONFIG_NFS_FS=y
-CONFIG_NFS_V3=y
-# CONFIG_NFS_V3_ACL is not set
-# CONFIG_NFS_V4 is not set
+# CONFIG_NFS_FS is not set
 # CONFIG_NFSD is not set
-CONFIG_LOCKD=y
-CONFIG_LOCKD_V4=y
-CONFIG_NFS_COMMON=y
-CONFIG_SUNRPC=y
-# CONFIG_SUNRPC_BIND34 is not set
-# CONFIG_RPCSEC_GSS_KRB5 is not set
-# CONFIG_RPCSEC_GSS_SPKM3 is not set
 # CONFIG_SMB_FS is not set
-CONFIG_CIFS=m
-# CONFIG_CIFS_STATS is not set
-# CONFIG_CIFS_WEAK_PW_HASH is not set
-# CONFIG_CIFS_XATTR is not set
-# CONFIG_CIFS_DEBUG2 is not set
-# CONFIG_CIFS_EXPERIMENTAL is not set
+# CONFIG_CIFS is not set
 # CONFIG_NCP_FS is not set
 # CONFIG_CODA_FS is not set
 # CONFIG_AFS_FS is not set
