LGMOD_S7: Make it work in S6 - fix file name of libopenrelease.so
git-svn-id: http://svn.openlgtv.org.ru@659 6f01ea5f-641d-df11-ac65-003048919802

--- a/lgmod_s7/trunk/busybox/.config
+++ b/lgmod_s7/trunk/busybox/.config
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Busybox version: 1.18.5
-# Sat Sep 24 14:07:46 2011
+# Sun Oct  2 22:28:02 2011
 #
 CONFIG_HAVE_DOT_CONFIG=y
 
@@ -54,14 +54,14 @@ CONFIG_FEATURE_HAVE_RPC=y
 #
 # Build Options
 #
-CONFIG_STATIC=y
+# CONFIG_STATIC is not set
 # CONFIG_PIE is not set
 # CONFIG_NOMMU is not set
 # CONFIG_BUILD_LIBBUSYBOX is not set
 # CONFIG_FEATURE_INDIVIDUAL is not set
 # CONFIG_FEATURE_SHARED_BUSYBOX is not set
 CONFIG_LFS=y
-CONFIG_CROSS_COMPILER_PREFIX="../cross-compiler-mipsel/bin/mipsel-"
+CONFIG_CROSS_COMPILER_PREFIX="../Saturn7/GP2_MSTAR/gp2-s7-mipsel-lg-gcc-4.3.2-glibc-2.9-nptl/bin/mipsel-linux-"
 CONFIG_EXTRA_CFLAGS=""
 
 #
