OpenLGTV BCM: 'upgrade mode' - stopping services when epaks are on USB stick to ensure there's enough free memory for upgrade
git-svn-id: http://svn.openlgtv.org.ru@670 6f01ea5f-641d-df11-ac65-003048919802

--- a/OpenLGTV_BCM/trunk/OpenLGTV_BCM-src/etc/rc.d/rc.settings
+++ b/OpenLGTV_BCM/trunk/OpenLGTV_BCM-src/etc/rc.d/rc.settings
@@ -47,6 +47,10 @@ if [ "$netcast_keyboard_mouse_support" = "" ]; then echo "netcast_keyboard_mouse
 if [ "$netcast_webproxy" = "" ];               then echo "netcast_webproxy=0#Web proxy for navigation controls on external sites"           | tee -a /mnt/user/cfg/settings.default | sed 's/#.*//g' >> /mnt/user/cfg/settings; fi
 # more to come...
 
+#for def_svar in `cat /etc/default/settings.default`
+#do
+#done
+
 settings_depreciated="confirmations rebooting netcast_kill_browser"
 
 #v- this could make inconsistency between default settings and current ones, so disabling it for now
