LGMOD_S7: busybox config and cross-compile script (update); busybox binary - not static
git-svn-id: http://svn.openlgtv.org.ru@672 6f01ea5f-641d-df11-ac65-003048919802

--- a/lgmod_s7/trunk/busybox/.config
+++ b/lgmod_s7/trunk/busybox/.config
@@ -61,7 +61,7 @@ CONFIG_FEATURE_HAVE_RPC=y
 # CONFIG_FEATURE_INDIVIDUAL is not set
 # CONFIG_FEATURE_SHARED_BUSYBOX is not set
 CONFIG_LFS=y
-CONFIG_CROSS_COMPILER_PREFIX="../Saturn7/GP2_MSTAR/gp2-s7-mipsel-lg-gcc-4.3.2-glibc-2.9-nptl/bin/mipsel-linux-"
+CONFIG_CROSS_COMPILER_PREFIX="../Saturn7/cross-compiler/bin/mipsel-linux-"
 CONFIG_EXTRA_CFLAGS=""
 
 #
