LGMOD_S7: cfg/mac 80211 as module (prepare for compat-wireless - if it works at all); updated modules; cross-compile - added DFB examples
git-svn-id: http://svn.openlgtv.org.ru@679 6f01ea5f-641d-df11-ac65-003048919802

--- a/lgmod_s7/trunk/kernel/.config
+++ b/lgmod_s7/trunk/kernel/.config
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Linux kernel version: 2.6.26
-# Wed Oct 12 21:37:21 2011
+# Thu Oct 13 12:19:05 2011
 #
 
 #
@@ -418,10 +418,10 @@ CONFIG_BT_HCIVHCI=m
 #
 # Wireless
 #
-CONFIG_CFG80211=y
+CONFIG_CFG80211=m
 CONFIG_NL80211=y
 CONFIG_WIRELESS_EXT=y
-CONFIG_MAC80211=y
+CONFIG_MAC80211=m
 
 #
 # Rate control algorithm selection
@@ -624,8 +624,7 @@ CONFIG_MII=y
 #
 # Wireless LAN
 #
-CONFIG_WLAN_PRE80211=y
-# CONFIG_STRIP is not set
+# CONFIG_WLAN_PRE80211 is not set
 CONFIG_WLAN_80211=y
 CONFIG_LIBERTAS=m
 CONFIG_LIBERTAS_USB=m
@@ -671,7 +670,7 @@ CONFIG_RT2X00_DEBUG=y
 CONFIG_USB_KAWETH=m
 CONFIG_USB_PEGASUS=m
 CONFIG_USB_RTL8150=m
-CONFIG_USB_USBNET=m
+CONFIG_USB_USBNET=y
 CONFIG_USB_NET_AX8817X=m
 CONFIG_USB_NET_CDCETHER=m
 CONFIG_USB_NET_DM9601=m
