busybox: kbd_mode; kernel: flash config, prepare image; rcS: check if pty is available (both: buildin or insmod); modules: hid, usbhid
git-svn-id: http://svn.openlgtv.org.ru@689 6f01ea5f-641d-df11-ac65-003048919802

--- a/lgmod_s7/trunk/cross-compile/busybox.config
+++ b/lgmod_s7/trunk/cross-compile/busybox.config
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Busybox version: 1.18.5
-# Sun Oct  2 22:28:02 2011
+# Sat Oct 15 20:51:47 2011
 #
 CONFIG_HAVE_DOT_CONFIG=y
 
@@ -311,7 +311,7 @@ CONFIG_FEATURE_MD5_SHA1_SUM_CHECK=y
 CONFIG_CLEAR=y
 # CONFIG_DEALLOCVT is not set
 # CONFIG_DUMPKMAP is not set
-# CONFIG_KBD_MODE is not set
+CONFIG_KBD_MODE=y
 # CONFIG_LOADFONT is not set
 # CONFIG_LOADKMAP is not set
 # CONFIG_OPENVT is not set
