s6_s7_modules: mcs7830 from lprot
git-svn-id: http://svn.openlgtv.org.ru@700 6f01ea5f-641d-df11-ac65-003048919802

--- a/s6_s7_modules/Makefile
+++ b/s6_s7_modules/Makefile
@@ -3,7 +3,7 @@ TOPINC  = -I$(KERNEL_SRC)/include
 CC	= $(CROSS_COMPILE)gcc
 LD	= $(CROSS_COMPILE)ld
 
-obj-m := asix.o dm9601.o pegasus.o
+obj-m := asix.o dm9601.o pegasus.o mcs7830.o
 
 all:
 	make -C ${KERNEL_SRC} SUBDIRS=$(PWD) modules
