LGMOD_S7: fix S6 busybox
git-svn-id: http://svn.openlgtv.org.ru@718 6f01ea5f-641d-df11-ac65-003048919802

--- a/lgmod_s7/trunk/cross-compile/busybox-S6.config
+++ b/lgmod_s7/trunk/cross-compile/busybox-S6.config
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Busybox version: 1.18.5
-# Sun Oct 16 22:58:05 2011
+# Tue Oct 18 22:22:53 2011
 #
 CONFIG_HAVE_DOT_CONFIG=y
 
@@ -277,7 +277,7 @@ CONFIG_UNAME=y
 # CONFIG_USLEEP is not set
 # CONFIG_UUDECODE is not set
 # CONFIG_UUENCODE is not set
-# CONFIG_WC is not set
+CONFIG_WC=y
 # CONFIG_FEATURE_WC_LARGE is not set
 # CONFIG_WHO is not set
 # CONFIG_WHOAMI is not set
@@ -496,7 +496,7 @@ CONFIG_FEATURE_MODPROBE_SMALL_CHECK_ALREADY_LOADED=y
 # CONFIG_FEATURE_CHECK_TAINTED_MODULE is not set
 # CONFIG_FEATURE_MODUTILS_ALIAS is not set
 # CONFIG_FEATURE_MODUTILS_SYMBOLS is not set
-CONFIG_DEFAULT_MODULES_DIR="/modules"
+CONFIG_DEFAULT_MODULES_DIR="/lib/modules"
 CONFIG_DEFAULT_DEPMOD_FILE="modules.dep"
 
 #
