LGMOD_S7: busybox(S6): +sort +modprobe -powertop; webui: fix "ps"; different module.sh for S6/7; modules.dep S6 (could be auto generated from create_img.sh); "insmod" magic for old users (abs.path to modules were used)
git-svn-id: http://svn.openlgtv.org.ru@720 6f01ea5f-641d-df11-ac65-003048919802

--- a/lgmod_s7/trunk/cross-compile/busybox.config
+++ b/lgmod_s7/trunk/cross-compile/busybox.config
@@ -862,7 +862,7 @@ CONFIG_FEATURE_MIME_CHARSET=""
 CONFIG_IOSTAT=y
 CONFIG_MPSTAT=y
 CONFIG_PMAP=y
-CONFIG_POWERTOP=y
+# CONFIG_POWERTOP is not set
 # CONFIG_SMEMCAP is not set
 CONFIG_FREE=y
 CONFIG_FUSER=y
