--- a/lgmod_s7/trunk/cross-compile/busybox-S6.config
+++ b/lgmod_s7/trunk/cross-compile/busybox-S6.config
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Busybox version: 1.18.5
-# Tue Oct 18 22:22:53 2011
+# Tue Oct 18 23:23:36 2011
 #
 CONFIG_HAVE_DOT_CONFIG=y
 
@@ -253,7 +253,7 @@ CONFIG_FEATURE_RMDIR_LONG_OPTIONS=y
 CONFIG_SLEEP=y
 CONFIG_FEATURE_FANCY_SLEEP=y
 CONFIG_FEATURE_FLOAT_SLEEP=y
-# CONFIG_SORT is not set
+CONFIG_SORT=y
 # CONFIG_FEATURE_SORT_BIG is not set
 # CONFIG_SPLIT is not set
 # CONFIG_FEATURE_SPLIT_FANCY is not set
@@ -472,16 +472,16 @@ CONFIG_LAST_SYSTEM_ID=0
 # Linux Module Utilities
 #
 # CONFIG_MODINFO is not set
-CONFIG_MODPROBE_SMALL=y
-CONFIG_FEATURE_MODPROBE_SMALL_OPTIONS_ON_CMDLINE=y
-CONFIG_FEATURE_MODPROBE_SMALL_CHECK_ALREADY_LOADED=y
-# CONFIG_INSMOD is not set
+# CONFIG_MODPROBE_SMALL is not set
+# CONFIG_FEATURE_MODPROBE_SMALL_OPTIONS_ON_CMDLINE is not set
+# CONFIG_FEATURE_MODPROBE_SMALL_CHECK_ALREADY_LOADED is not set
+CONFIG_INSMOD=y
 # CONFIG_RMMOD is not set
-# CONFIG_LSMOD is not set
+CONFIG_LSMOD=y
 # CONFIG_FEATURE_LSMOD_PRETTY_2_6_OUTPUT is not set
-# CONFIG_MODPROBE is not set
+CONFIG_MODPROBE=y
 # CONFIG_FEATURE_MODPROBE_BLACKLIST is not set
-# CONFIG_DEPMOD is not set
+CONFIG_DEPMOD=y
 
 #
 # Options common to multiple modutils
@@ -850,7 +850,7 @@ CONFIG_FEATURE_MIME_CHARSET=""
 CONFIG_IOSTAT=y
 CONFIG_MPSTAT=y
 CONFIG_PMAP=y
-CONFIG_POWERTOP=y
+# CONFIG_POWERTOP is not set
 # CONFIG_SMEMCAP is not set
 CONFIG_FREE=y
 CONFIG_FUSER=y
